--- a/client/src/pages/Chat/chat.scss
+++ b/client/src/pages/Chat/chat.scss
@@ -14,7 +14,13 @@
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
+
+                &--actions {
+                    display: flex;
+                    align-items: center;
+                }
             }
+
             &__main {
                 display: flex;
                 justify-content: space-around;
