Hotfix user messages overflow.

--- a/client/src/pages/Chat/components/UserMessages/userMessages.scss
+++ b/client/src/pages/Chat/components/UserMessages/userMessages.scss
@@ -1,8 +1,13 @@
 .user-messages {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+
     &__header {
     }
 
     &__main {
+        flex: 1;
         overflow: auto;
         font-size: 1.2rem;
 
