--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -1,4 +1,6 @@
 @import "./styles/components";
+@import "primereact/resources/themes/lara-light-indigo/theme.css"; //theme
+@import "primereact/resources/primereact.min.css"; //core css
 
 html {
     font-size: 10px;
